solved dark mode issue

--- a/style.css
+++ b/style.css
@@ -7,18 +7,13 @@ body {
     background-color: #fff;
     overflow-x: hidden;
 }
- 
-.mode{
-    /* height: 100vh; */
-    /* background: rgb(199, 199, 199); */
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-     
- } 
+.heading{
+    color: ivory;
+} 
 svg{
     cursor: pointer;
+    position:initial;
+  
 
 }
 
